# diary-memory-service

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
configs/caddy/: Caddyfile
configs/postgres/: initdb-replication-hba.sh
data/: diary.db-shm  diary.db-wal
docs/: ARCHITECTURE.md  CHECKLIST.md  EDIT-DELETE-ROADMAP.md  GLOSSARY.md  GROUPED-MULTI-DIARY-ROADMAP.md  INVARIANTS.md  OPERATIONALIZATION-ROADMAP.md  READ-ACCESS-ENFORCEMENT-ROADMAP.md  RENAMING-ROADMAP.md  ROUTED-CHAT-ROADMAP.md  RUNBOOK.md  RUNTIME-INVARIANTS.md  SELF-HOSTED-DEPLOYMENT-ROADMAP.md  SUBJECT-SCOPING-ROADMAP.md  assumption-audit.md  assumptions.md  decision-log.md  execution-map.md  todo.md
docs/deploy1-drill/: deploy1-closure-post-real1-TEMPLATE.json  deploy1-cross-version-drill-TEMPLATE.json  deploy1-pilot-smoke-20260527-evidence.json  deploy1-upgrade-drill-20260522-evidence.json
docs/edit-delete-drill/: edit-delete-smoke-20260615-evidence.json  edit-delete-smoke-TEMPLATE.json
docs/op4-drill/: op4.3-20260519-evidence.json
docs/product/: BuildPlan.md  PRD.md  TechSpec.md
eval/retrieval/: corpus.jsonl  (+1 more)
tests/: test_answer_prompt.py  test_answer_schema.py  test_app_health.py  test_author_display_boundary.py  test_author_display_capture.py  test_author_display_resolution.py  test_boot_chat_gate.py  test_boot_classifier_gate.py  test_boot_dimension_gate.py  test_boot_knowledge_gate.py  test_chat_client_mock.py  test_chat_client_openai.py  test_chat_query_rewriter_mock.py  test_chat_route_classifier_mock.py  test_config.py  test_context_assembler.py  test_delete_tombstone.py  test_diary_models.py  test_diary_parser.py  test_diary_service.py  test_dispatcher_chat.py  test_dispatcher_delete.py  test_dispatcher_drafts.py  test_dispatcher_note_normalization.py  test_dispatcher_retrieval_fallback.py  test_dispatcher_sources.py  test_domain_models.py  test_domain_service.py  test_drafts_packing.py  test_edit_supersession_ingest.py  test_embedding_client_mock.py  test_embedding_client_openai.py  test_end_to_end_smoke.py  test_export_serializers.py  test_export_service.py  test_grouped_multi_diary.py  test_indexing_pipeline.py  test_knowledge_source_mock.py  test_knowledge_source_tavily.py  test_lifecycle_state_retrieval.py  (+53 more)
(+167 files in other folders)
