[project]
name = "diary-rag"
version = "0.0.0"
description = "Diary RAG Service for TheyGrow — Telegram-first diary memory."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "TheyGrow" }]

# Runtime dependencies are intentionally minimal at Slice 1.1.
# Storage, retrieval, providers, and Telegram SDK arrive in later slices.
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "psycopg[binary]>=3.2,<4",
    "psycopg-pool>=3.2,<4",
    "pgvector>=0.3,<1",
    "openai>=1.50,<2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7,<0.8",
    "mypy>=1.13,<2",
    "pytest>=8.3,<9",
    "httpx>=0.27,<0.28",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diary_rag"]

# Force-include non-Python data files needed at runtime.
[tool.hatch.build.targets.wheel.force-include]
"src/diary_rag/storage/postgres/schema.sql" = "diary_rag/storage/postgres/schema.sql"

# ---------------- Ruff ----------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF", # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------- Mypy ----------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["psycopg_pool.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pgvector.*"]
ignore_missing_imports = true

# ---------------- Pytest ----------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]
